<resources>
    <string name="app_name">DrawingApp</string>
    <string name="Color">color</string>
    <string name="Save">Save</string>
    <string name="lineWidth">Line Width</string>
    <string name="erase">Erase</string>
    <string name="clear">Clear</string>
    <string name="connect">Connect..</string>
    <string name="connectTitle">Connect via Bluetooth</string>
    <string name="BT_STATE_OFF">Bluetooth disabled</string>
    <string name="BT_STATE_ON">Bluetooth enabled</string>
    <string name="BT_DISCOVERABILITY_ON">Device visible</string>
    <string name="BT_BONDED">Pairing successful</string>
    <string name="set_width">Set Width</string>
    <string name="load">Load</string>
    <string name="STORAGE_PATH">/data/user/0/com.mobileanwendungen.drawingapp/app_imageDir</string>
    <string name="FILENAME">sheet.png</string>
    <string name="UUID">fb34bc1f-6f69-496d-a9e5-dea2af62f538</string>
    <string name="clicked_connected">Already connected</string>
    <string name="pairing">Pairing...</string>
    <string name="pairing_successful">Pairing successful</string>
    <string name="paired">Paired</string>
    <string name="connectButton">Connect</string>
    <string name="disconnectButton">Disconnect</string>
    <string name="connected">Connected</string>
    <string name="clicked_bonded">Already bonded</string>
    <string name="already_bonded">Already bonded</string>
    <string name="bonded">Bonded</string>
    <string name="restart_failed">Reconnect failed, try again</string>
    <string name="unable_to_connect">Device not available</string>
    <string name="loaded">Loaded</string>
    <string name="error_loading">Error! Could not be loaded</string>
    <string name="saved">Saved</string>
    <string name="no_file">No file available</string>
</resources>
